toolchains/eui-compiler/tests/error/baselines/tag-not-closed/expect.txt
Error: tag not closed propertly
</e:Skin
^
at line: 5, column: 1
at file: